# geu-new-bspguy

./: .gitignore  CMakeLists.txt  README.md
.github.example/workflows/: build.yml
.github/workflows/: windows-release.yml
ascript/angelscript/projects/msvc2022/: angelscript.vcxproj
ascript/angelscript/source/: as_criticalsection.h
glfw/src/: win32_init.c  win32_platform.h  win32_window.c
imgui/: imstb_truetype.h
resources/languages/: language.ini  language_ru.ini  language_zh.ini
src/: main.cpp
src/bsp/: Bsp.cpp  Bsp.h  BspMerger.cpp  BspMerger.h  bsplimits.h  bsptypes.cpp  bsptypes.h  forcecrc32.cpp
src/cli/: CommandLine.cpp  CommandLine.h  EntityQuery.cpp  EntityQuery.h
src/editor/: BspRenderer.cpp  BspRenderer.h  Fgd.cpp  Gui.cpp  Gui.h  PointEntRenderer.cpp  Renderer.cpp  Renderer.h  Settings.cpp  Settings.h
src/filedialog/: ImFileDialog.cpp
src/gl/: ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h  shaders.cpp
src/mdl/: mdl_studio.cpp  mdl_studio.h
src/nav/: LeafNavMesh.cpp  LeafNavMeshGenerator.cpp  LeafNavMeshGenerator.h  NavMeshGenerator.cpp
src/qtools/: vis.cpp  winding.cpp
src/res/: Wad.cpp  Wad.h  XASH_csm.cpp  XASH_csm.h  bspguy.rc
src/util/: Polygon3D.cpp  as.cpp  ini.h  lang_defs.h  lodepng.cpp  mat4x4.cpp  mat4x4.h  util.cpp  util.h  vectors.cpp  vectors.h
vs-project/: bspguy.sln  bspguy.vcxproj  bspguy.vcxproj.filters
vs-project/as/: angelscript.vcxproj  angelscript.vcxproj.filters
vs-project/fmt/: fmt.vcxproj
vs-project/glfw/src/: glfw.vcxproj
